// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders an event view component with all props 1`] = `
<div
  className="ui container view-wrapper event-view"
>
  <h1
    className="documentFirstHeading"
  >
    Hello World!
  </h1>
  <p
    className="documentDescription"
  >
    Hi
  </p>
  <div
    className="ui right floated segment"
  >
    <div
      className="ui dividing sub header"
    >
      What
    </div>
    <div
      className="ui list"
      role="list"
    >
      <div
        className="item"
        onClick={[Function]}
        role="listitem"
      >
        Guillotina
      </div>
      <div
        className="item"
        onClick={[Function]}
        role="listitem"
      >
        Volto
      </div>
    </div>
    <div
      className="ui dividing sub header"
    >
      When
    </div>
    <p
      className="event-when"
    >
      <span
        className="start"
      >
        <span
          className="start-date"
        >
          Jun 23, 2019
        </span>
        <span>
           
        </span>
        <span
          className="start-time"
        >
          8:50 PM
        </span>
      </span>
       to 
      <span
        className="end"
      >
        <span
          className="end-date"
        >
          Jun 24, 2019
        </span>
        <span>
           
        </span>
        <span
          className="end-time"
        >
          8:50 PM
        </span>
      </span>
    </p>
    <div
      className="ui dividing sub header"
    >
      Where
    </div>
    <p>
      Volto, Plone
    </p>
    <div
      className="ui dividing sub header"
    >
      Contact Name
    </div>
    <p>
      <a
        href="mailto:test@example.com"
      >
        John Doe
      </a>
    </p>
    <div
      className="ui dividing sub header"
    >
      Contact Phone
    </div>
    <p>
      0123456789
    </p>
    <div
      className="ui dividing sub header"
    >
      Attendees
    </div>
    <div
      className="ui list"
      role="list"
    >
      <div
        className="item"
        onClick={[Function]}
        role="listitem"
      >
        John Doe
      </div>
      <div
        className="item"
        onClick={[Function]}
        role="listitem"
      >
        Mario Rossi
      </div>
    </div>
    <div
      className="ui dividing sub header"
    >
      Web
    </div>
    <p>
      <a
        href="https://www.example.com"
      >
        Visit external website
      </a>
    </p>
  </div>
  <div
    dangerouslySetInnerHTML={
      Object {
        "__html": "<p>Hello World!</p>",
      }
    }
  />
</div>
`;

exports[`renders an event view component with only required props 1`] = `
<div
  className="ui container view-wrapper event-view"
>
  <h1
    className="documentFirstHeading"
  >
    Hello World!
  </h1>
  <div
    className="ui right floated segment"
  >
    <div
      className="ui dividing sub header"
    >
      When
    </div>
    <p
      className="event-when same-day"
    >
      <span
        className="start-date"
      >
        Jun 23, 2019
      </span>
       from 
      <span
        className="start-time"
      >
        8:50 PM
      </span>
       to 
      <span
        className="end-time"
      >
        9:50 PM
      </span>
    </p>
  </div>
</div>
`;
